Fix: Correct the size of social icons on mobile.

--- a/src/components/socialLinks.module.css
+++ b/src/components/socialLinks.module.css
@@ -27,6 +27,11 @@
     font-size: 1.75rem;
   }
 
+  .container li a svg {
+    width: auto;
+    height: auto;
+  }
+
   .container .link-text {
     display: none;
   }
